--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -1,19 +1,19 @@
-.container {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: minmax(30px, 1100px);
-}
-
-.container__header {
-    margin: 10px;
-    padding-top: 30px;
-    font-family: 'Roboto Slab', serif;
-}
-
 .container__header2 {
     border-bottom: rgb(185, 181, 181);
     border-bottom-style: solid;
     border-bottom-width: 2px;
     padding-bottom: 10px;
+}
+
+.taskList {
+    background-color: rgb(255, 255, 255);
+    padding: 15px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 4px 4px 5px 0px #9E9E9E;
     font-family: 'Roboto Slab', serif;
 }
