--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -5,7 +5,7 @@
     align-items: center;
     border-bottom: 2px solid rgb(202, 198, 198);
     padding: 4px;
-    font-family: 'Roboto Slab', serif;
+    /* font-family: 'Roboto Slab', serif; */
 }
 
 .listItem--hide {
@@ -23,21 +23,47 @@
     padding: 20px;
 }
 
-.container__taskList {
-    background-color: rgb(255, 255, 255);
-    padding: 40px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 4px 4px 5px 0px #9E9E9E;
-    font-family: 'Roboto Slab', serif;
-}
-
 .taskDone {
     text-decoration: line-through;
-    font-family: 'Roboto Slab', serif;
 }
+
+button {
+    cursor: pointer;
+}
+
+.button {
+    margin: 7px;
+    background-color: rgb(19, 179, 19);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    border: none;
+    padding: 10px;
+    height: 20px;
+    width: 20px;
+    transition: 1s;
+}
+
+.button--thick {
+    background-image: url(../Buttons/images/tick.jpg);
+}
+
+.button:hover {
+    background-color: rgb(144, 230, 144);
+}
+
+.button--remove {
+    background-color: red;
+    background-image: url(../Buttons/images/rubbish.png);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    transition: 1s;
+}
+
+.button--remove:hover {
+    background-color: rgb(221, 170, 170);
+}
+
+
 
